--- a/CSS/main.css
+++ b/CSS/main.css
@@ -39,9 +39,7 @@ html, body {
 .esriBasemapGallerySelectedNode .esriBasemapGalleryThumbnail{
 	margin: 1px !important;
 }
-
-
-#layerlistdiv {
+/*#layerlistdiv {
 	width: 250px;
 	position: absolute !important;
 	z-index: 9999;
@@ -49,8 +47,20 @@ html, body {
 	display: none;
 	border: 1px solid #aaa;
 	background: white;
-}
+}*/
 
+#layer_list{
+	  position:absolute;
+	  right: 1px;
+	  top: 84px;
+	  z-index: 100;
+	  background: #fff;
+	  border: 1px solid #000;
+	  padding: 5px;
+	  overflow : auto;
+	  height : 230px;
+	  width: 200px;
+}
 .navbar-brand {
 	float: left;
 	padding: 5px !important;
@@ -242,7 +252,7 @@ a.nav-expander.fixed {
 }
 
 .nav-expanded a.nav-expander.fixed {
-	right: 162px; /* quick link button expanded */
+	right: 239px; /* quick link button expanded */
 	top: 116px;
 }
 
@@ -252,10 +262,10 @@ nav {
 	height: 100%;
 	overflow: auto;
 	position: fixed;
-	top: 112px;
-	right: -195px; /* menu offset */
+	top: 85px;
+	right: -227px; /* menu offset */
 	font-size: 10px;
-	width: 143px; /* menu width */
+	width: 227px; /* menu width */
 	z-index: 2000;
 	margin: 2px 0px 0px 0px;
 	transition: right 0.3s ease-in-out 0s;
@@ -282,9 +292,14 @@ body.nav-expanded {
 }
 .panel-heading {
 	padding: 10px 15px;
+	text-align: center;
 	border-bottom: 1px solid transparent;
 	border-top-left-radius: 3px;
-	border-top-right-radius: 48px;
+	border-top-right-radius: 0px;
+}
+.panel-body {
+    padding: 15px;
+    text-align: center;
 }
 
 .panel {
