--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,4 +1,4 @@
-[12:41 PM, 3/2/2017] RJ Bak: html, body {
+html, body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
@@ -30,7 +30,7 @@
 
 #legendDiv{
 	width: 372px;
-    z-index: 9999;
+    
     height: 200px; 
     border: 1px solid #aaa;
     overflow: auto;
@@ -101,7 +101,8 @@ h6 {
 	rgba(218, 240, 246, 1) 100% );
 	border-top: 2px solid aliceblue;
 	border-bottom: 2px solid #ddf1fa;
-	box-shadow: 0px 10px 5px grey;
+	box-shadow: 0px 10px 5px lightgray;
+	margin-bottom:10px;
 	padding: 4px;
 	padding left: 10px;
 	height: 38px;
@@ -295,11 +296,13 @@ body.nav-expanded {
 	border-top-left-radius: 3px;
 	border-top-right-radius: 0px;
 }
+.panel-heading.collapsed:hover {
+    cursor: pointer;
+}
 .panel-body {
     padding: 15px;
     text-align: center;
 }
-
 .panel {
 	background-color: #86a9c7;
 	border: 1px solid transparent;
