--- a/CSS/main.css
+++ b/CSS/main.css
@@ -44,7 +44,7 @@ html, body {
 	overflow:auto;
 }*/
 
-#layerlist{
+#layerListDom{
 	  position:absolute;
 	  right: 1px;
 	  top: 84px;
@@ -53,6 +53,7 @@ html, body {
 	  border: 1px solid #000;
 	  padding: 5px;
 	  height:90px;
+	  width:600px;
 }
 .navbar-brand {
 	float: left;
