--- a/CSS/main.css
+++ b/CSS/main.css
@@ -628,8 +628,9 @@ button, input, optgroup, select, textarea {
 	position: absolute;
 	top: 10%;
 	left: 10%;
-	height: 30%;
-	width: 50%;
-		
+	height: 50%;
+	width: 82%;
+	z-index:100;
+	display: none;	
 	background-color: white;
 }
