--- a/CSS/main.css
+++ b/CSS/main.css
@@ -625,12 +625,13 @@ button, input, optgroup, select, textarea {
 }                        
 #featuretable
 {
-	position: absolute;
+	position:absolute;
 	top: 10%;
 	left: 10%;
 	height: 50%;
-	width: 82%;
+	width: 50%;
 	z-index:100;
+	/*margin: 100px 150px 100px 80px;*/
 	display: none;	
-	background-color: white;
+    /*background-color: white;*/
 }
