--- a/CSS/main.css
+++ b/CSS/main.css
@@ -633,6 +633,6 @@ button, input, optgroup, select, textarea {
 	z-index:-100;
 	/*margin: 100px 150px 100px 80px;*/
 	/*display: none;	*/
-    /*background-color: white;*/
+    background-color: white;
 }
 
